--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-slick": "^0.30.2",
     "react-tabs": "^6.0.2",
